--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,13 @@
               "src/assets"
             ],
             "styles": [
+              "src/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/jquery.min.js",
+              "src/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
