--- a/angular.json
+++ b/angular.json
@@ -23,13 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": [
-              "src/jquery.min.js",
-              "src/bootstrap.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
