--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^2.1.2",
     "core-js": "^2.5.4",
     "ngx-file-drop": "^4.0.4",
     "rxjs": "^6.0.0",
