--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@ng-bootstrap/ng-bootstrap": "^2.1.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-smart-table": "^1.3.4",
     "ngx-file-drop": "^4.0.6",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -47,6 +49,7 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng2-completer": "^2.0.8",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
