--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@ng-bootstrap/ng-bootstrap": "^2.1.2",
         "core-js": "^2.5.4",
         "hammerjs": "^2.0.8",
+        "jsonfile": "^4.0.0",
         "ng2-smart-table": "^1.3.4",
         "ngx-file-drop": "^4.0.6",
         "rxjs": "^6.0.0",
